Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-12487

[C++][Dataset] ScanBatches() hangs if there's an error during scanning

    XMLWordPrintableJSON

Details

    Description

      Errors during scanning aren't properly reported, causing the iterator to hang forever.

      This affects ScanBatches() and anything built on top of it (Python to_batches, TakeRows, etc)

      Verified on the 4.0.0 RC

      Attachments

        Issue Links

          Activity

            People

              lidavidm David Li
              lidavidm David Li
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 1h 10m
                  1h 10m