ARROW-12487: [C++][Dataset] Fix ScanBatches() hanging